# jquants-mcp

./: .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.ja.md  README.md  SECURITY.md  cloud-run-service.yaml  compose.yml  config.ini.example  mcp-stdio-proxy.py  mkdocs.yml  pyproject.toml  release-notes.md  release-please-config.json  ruff.toml  server.json
.claude/commands/: review.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  copilot-review.yml  dependency-review.yml  docs.yml  release-please.yml  release.yml  sbom.yml
docs/: README.ja.md  README.md  changelog-historical.md  claude-project-instructions.md  cloud-run-memory-sizing.md  comparison.md  disclaimer.ja.md  disclaimer.md  dr.md  faq.ja.md  faq.md  gcsfuse-postmortem.md  index.ja.md  index.md  quickstart.ja.md  quickstart.md  slo.md  standard-upgrade-runbook.md  tools.ja.md  tools.md
docs/deploy/: README.ja.md  README.md  gcp.ja.md  gcp.md  local.ja.md  local.md  overview.ja.md  overview.md
docs/runbooks/: 5xx-spike.md  README.md  cache-db-missing.md  firestore-outage.md  firestore-restore.md  oauth-loop.md  oom.md  plan-upgrade.md  rename-cloud-run-and-gcs.md  secrets-rotation.md
ops/alerts/: 01-memory-high.yaml  02-5xx-rate.yaml  03-oom-kill.yaml  04-firestore-errors.yaml  05-cache-db-download-fail.yaml  06-no-instances.yaml  07-cache-stale.yaml  README.md  deploy.sh
ops/billing/: README.md
ops/firestore-backups/: README.md
ops/pubsub/: setup.md
scripts/: bulk_fetch_all.py  collect_metrics.py  daily-fetch.crontab  daily_fetch.py  entrypoint.sh  gcs_export_cache.py  gcs_sync.py  import_csv_to_cache.py  load_test.py  mcp-stdio-proxy.py  migrate_adj_factor.py  rotate_encryption_key.py  screener_populate_history.py  sync_plans.py  verify_cache_completeness.py
skills/jquants-mcp-usage/: SKILL.md
src/j_quants_dat_mcp/: __init__.py  cli.py  client.py  config.py  exceptions.py  server.py
src/j_quants_dat_mcp/cache/: __init__.py  store.py
src/j_quants_dat_mcp/tools/: __init__.py  bulk.py  derivatives.py  equities.py  financials.py  indices.py  markets.py
src/jquants_dat_mcp/: __init__.py  audit.py  auth.py  cli.py  client.py  config.py  crypto.py  exceptions.py  google_provider.py  oauth_kv_store.py  oauth_login.py  rate_limit.py  server.py  settings_ui.py  validation.py  validators.py
src/jquants_dat_mcp/cache/: __init__.py  schema.py  store.py
src/jquants_dat_mcp/db/: __init__.py  users.py  users_firestore.py
src/jquants_dat_mcp/models/: __init__.py  user.py
src/jquants_dat_mcp/settings/: __init__.py  routes.py  session.py  templates.py
src/jquants_dat_mcp/tools/: bulk.py  derivatives.py  equities.py  financials.py  indices.py  markets.py
src/jquants_mcp/: __init__.py  allowlist.py  audit.py  auth.py  cli.py  client.py  config.py  crypto.py  exceptions.py  oauth_kv_store.py  oauth_login.py  request_context.py  server.py  tool_annotations.py  validation.py  validators.py
src/jquants_mcp/cache/: __init__.py  gcs_download.py  schema.py  screener_compute.py  store.py  technical.py
src/jquants_mcp/db/: __init__.py  users.py  users_firestore.py
tests/: conftest.py  test_allowlist.py  test_allowlist_integration.py  test_audit.py  test_auth.py  test_bulk_fetch_all.py  test_cache_bypass.py  test_cache_freshness.py  test_cache_integrity.py  test_cache_store.py  test_cli.py  test_client.py  test_config.py  test_crypto.py  test_daily_fetch.py  test_db_users.py  test_db_users_firestore.py  test_fins_composite_pk.py  test_gcs_export_cache.py  test_gcs_sync.py  test_google_provider.py  test_health_check.py  test_import_csv_to_cache.py  test_market_overview.py  test_oauth_kv_store.py  test_oauth_login.py  test_plan_detection.py  test_pubsub_reload.py  test_rate_limit.py  test_schema.py  test_server_middleware.py  test_settings_ui.py  test_skill_doc.py  test_summary.py  test_tool_annotations.py  test_tool_error_handling.py  test_tools_bulk.py  test_tools_charts.py  test_tools_derivatives.py  test_tools_equities.py  (+10 more)
(+18 files in other folders)
