[project]
name = "jquants-dat-mcp"
dynamic = ["version"]
description = "MCP server for retrieving Japanese stock market data via J-Quants API v2"
readme = "README.md"
authors = [{ name = "shige" }]
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "fastmcp>=3.2.1",
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
cloud-run = [
    "google-cloud-storage>=2.0.0",
    "google-cloud-firestore>=2.0.0",
]

[project.scripts]
jquants-dat-mcp = "jquants_dat_mcp.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.22.0",
    "mcp>=1.16.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/jquants_dat_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jquants_dat_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
