[project]
name = "jquants-mcp"
version = "0.39.0"
description = "MCP server for retrieving Japanese stock market data via J-Quants API v2"
readme = "README.md"
authors = [{ name = "shige" }]
license = { text = "MIT" }
license-files = ["LICENSE"]
requires-python = ">=3.10"

dependencies = [
    "fastmcp>=3.2.1",
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Repository = "https://github.com/shigechika/jquants-mcp"
Documentation = "https://github.com/shigechika/jquants-mcp/tree/main/docs"
"Bug Tracker" = "https://github.com/shigechika/jquants-mcp/issues"

[project.optional-dependencies]
cloud-run = [
    "google-cloud-storage>=2.0.0",
    "google-cloud-firestore>=2.0.0",
]
# Candlestick chart rendering (matplotlib + mplfinance ≈ 60 MB).
# Pulled in by `render_candlestick` in tools/charts.py; the registration
# silently skips when these are not installed, so the lean stdio install
# can omit them.
charts = [
    "mplfinance>=0.12",
    "matplotlib>=3.7",
]

[project.scripts]
jquants-mcp = "jquants_mcp.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.22.0",
    "mcp>=1.16.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-static-i18n>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jquants_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
